--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -832,6 +832,69 @@ table td {
   margin-top: 20px; /* Adjust this value as needed for the desired gap */
 }
 
+.top-section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+.left-column, .right-column {
+  flex-basis: 50%; /* Adjust as needed */
+}
+
+.left-column {
+  /* Additional styling for the text column */
+  padding-right: 20px; /* Adds some space between the columns */
+}
+
+.right-column {
+  /* Additional styling for the image column */
+  text-align: right; /* Aligns the image to the right side of the column */
+}
+
+.right-column img {
+  max-width: 100%; /* Ensures the image is responsive */
+  height: auto; /* Maintains aspect ratio */
+}
+
+.rounded-image {
+  border-radius: 15px; /* Adjust this value to increase or decrease the roundness */
+}
+
+.intro-message {
+  font-size: 48px; /* Adjust this value as needed for the desired text size */
+  color: black; /* Sets the text color to black */
+  font-weight: bold; /* Makes the text bold */
+}
+
+.categories-list {
+  font-size: 14px; /* Adjusts the text size */
+  margin: 20px 0; /* Adds some space around the list */
+}
+
+.categories-list ul {
+  list-style-type: none; /* Removes the default list bullet points */
+  padding: 0; /* Removes the default padding */
+}
+
+.categories-list li {
+  margin-bottom: 10px; /* Adds space between list items */
+  padding: 10px; /* Adds padding around list items */
+  background-color: #f0f0f0; /* Adds a background color to each item */
+  border-radius: 5px; /* Rounds the corners of the list items */
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.categories-list a {
+  text-decoration: none; /* Removes the underline from links */
+  color: #000; /* Sets the text color */
+  display: block; /* Makes the entire list item area clickable */
+}
+
+.categories-list li:hover {
+  background-color: #e0e0e0; /* Changes background color on hover */
+}
+
 body, .site-header {
   border-top: none !important;
 }
