--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -980,6 +980,10 @@ table td {
   text-decoration: none; /* Override any text-decoration changes on hover/focus/active */
 }
 
+.wrapper {
+  max-width: 1000px; /* Or any specific pixel value like 1200px */
+}
+
 body, .site-header {
   border-top: none !important;
 }
